--- a/src/assets/styles/forms.css
+++ b/src/assets/styles/forms.css
@@ -7,22 +7,19 @@
   font-family: "Roboto", sans-serif;
 }
 
-.form-label {
+.form-label,
+.span-redirect {
   font-family: "Roboto", sans-serif;
   margin-top: 0.5rem;
 }
 
 .container {
-  width: 80%;
-  height: 80vh;
+  width: 100%;
+  height: 85vh;
   display: flex;
 }
 
-.form-header-title {
-  margin-top: -8rem;
-}
-
-.login-form-image {
+.form-image {
   width: 50%;
   display: flex;
   justify-content: center;
@@ -31,11 +28,11 @@
   padding: 1rem;
 }
 
-.login-form-image img {
+.form-image img {
   width: 31rem;
 }
 
-.login-form-group {
+.form-container {
   width: 50%;
   display: flex;
   flex-direction: column;
@@ -58,7 +55,7 @@
 .form-field {
   display: flex;
   flex-direction: column;
-  margin-bottom: 2rem;
+  margin-bottom: 0.5rem;
 }
 
 .inputs-form {
@@ -89,10 +86,10 @@
   margin-top: -3;
 }
 
-.login-button button {
+.submit-button button {
   width: 10rem;
   height: 3rem;
-  margin-top: 0.5rem;
+  margin-top: 1.5rem;
   margin-bottom: 1rem;
   border: none;
   background-color: #281de4;
@@ -100,11 +97,11 @@
   cursor: pointer;
 }
 
-.login-button button:hover {
+.submit-button button:hover {
   background-color: #6b63fff1;
 }
 
-.login-button button a {
+.submit-button button a {
   text-decoration: none;
   font-weight: 500;
   color: #fff;
