--- a/src/assets/styles/cards.css
+++ b/src/assets/styles/cards.css
@@ -1,10 +1,10 @@
 .card-container {
-  width: 250px;
-
+  width: 300px;
+  height: 200px;
   border: 3px solid #000000;
   border-radius: 5px;
-  margin: 10px;
-  padding: 5px;
+  margin: 30px;
+  padding: 10px;
   cursor: pointer;
 }
 
@@ -13,22 +13,26 @@
   float: right;
   margin-right: 10px;
   margin-top: 5px;
-  background-color: black;
+  background-color: #150aeb;
   border-radius: 5px;
   color: white;
-  font-weight: 700;
-  padding: 3px;
-  font-family: monospace;
+  font-weight: 800;
+  padding: 5px;
+  font-family: "Roboto";
 }
 
 .card-title {
   display: inline;
 }
 
-.card-cost {
-  margin-top: 15px;
+.card-status {
+  margin-top: 40px;
 }
 
 .card-container:hover {
-  background-color: aqua;
+  background-color: #0000001c;
+}
+
+.card-content {
+  margin-top: 10px;
 }
